# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter-check.yml  linter-test-check.yml
gendiff/: __init__.py  core.py  generate_diff.py  parsing_cli.py  plaintify.py  stringify.py
gendiff/scripts/: gendiff.py
tests/: test_core.py
tests/files/: answer2.txt  answer2_2.txt  filepath1_2.json  filepath2_2.json
